# multi-tenant-ingestion

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  README-OLD.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
deployment/configs/: development.env  production.env  staging.env
deployment/nginx/: nginx.conf
deployment/scripts/: deploy.sh  setup-organization.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md
infrastructure/kubernetes/namespaces/: namespace-template.yml
infrastructure/terraform/: iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: config-management.py  init-db.sql  seed-development-data.py  setup-databricks-workspace.py
services/auth-service/app/: main.py
services/auth-service/app/api/: auth.py  users.py
services/auth-service/app/core/: config.py  database.py  middleware.py  security.py
services/auth-service/app/utils/: permissions.py
services/catalog-service/app/: main.py
services/connector-service/: Dockerfile  requirements.txt
services/connector-service/app/: main.py
services/connector-service/app/api/: connectors.py
services/connector-service/app/connectors/: base.py
services/connector-service/app/connectors/cloud/: s3.py
services/connector-service/app/connectors/nosql/: mongodb.py
services/connector-service/app/connectors/rdbms/: mysql.py  postgresql.py
services/connector-service/app/connectors/streaming/: kafka.py
services/connector-service/app/connectors/warehouse/: snowflake.py
services/connector-service/app/core/: registry.py
services/cost-service/app/: quota_enforcer.py
services/data-quality-service/app/: main.py
services/data-quality-service/app/rules/: quality_engine.py
services/models/: __init__.py  audit.py  base.py  connection.py  data_quality.py  job.py  pipeline.py  tenant.py  user.py
services/monitoring/app/: main.py
services/pipeline-service/: Dockerfile  requirements.txt
services/pipeline-service/app/: main.py
services/pipeline-service/app/api/: pipelines.py
services/pipeline-service/app/api/endpoints/: health.py  pipelines.py  runs.py
services/pipeline-service/app/core/: config.py  database.py  databricks_client.py  executor.py  notebook_generator.py  security.py
services/pipeline-service/app/models/: base.py  pipeline.py
services/pipeline-service/app/services/: databricks_service.py
services/pipeline-service/app/templates/: pyspark_template.py
services/resource-manager/app/: main.py
services/security/app/core/: rbac.py
services/ui/: package.json
services/ui/public/: index.html
services/ui/src/: App.js  App.tsx  index.tsx
tests/integration/: test_tenant_isolation.py
tests/unit/: test_data_quality_service.py
